@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-24T08:15:13Z",
+  "timestamp" : "2023-09-24T16:15:54Z",
   "count_outdated" : 849,
   "uniques_outdated" : 499,
-  "count" : 870,
+  "count" : 871,
   "uniques" : 513,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
